--- a/fromIDS.Rmd
+++ b/fromIDS.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
+library(eha)
 ```
 
 ## Introduction
@@ -29,50 +30,169 @@ kable(head(INDIVIDUAL), row.names = FALSE)
 
 This is the total information on *id = 1*. The structure of the data frame is repeated for each individual: Six rows per individual, and only *static data* (fixed over time). This is a typical example of an *un-tidy data set*. A *tidy* data set has variables in columns and observations in rows, and that is what is needed in any structured statistical data analysis (source: [Hadley Wickham](https://www.jstatsoft.org/article/view/v059i10)). 
 
-This u-tidiness is easily fixed, but we prefer to start in the other end, with the *INDIV_INDIV* data frame.
+This un-tidiness is easily fixed, but we prefer to start in the other end, with the *INDIV_INDIV* data frame.
 
 ## The *INDIV_INDIV* data frame
 
 The *INDIV_INDIV* data frame has a very simple structure:
 
 ```{r lookINDIV_INDIV}
+library(xtable)
 load("data/INDIV_INDIV.rda")
 kable(head(INDIV_INDIV), row.names = FALSE)
 ```
 
-The variable *id_1* is the mother of *id_2*, and the variable *Relation* is *redundant* (constant equal to "Mother"). *INDIV_INDIV* is a tidy data frame, if we regard *id_2* as the key of the *observations*. Remember, *id_2* is the child of *id_1*, so a starting point for our efforts is the data frame *per*, given by 
+The variable *id_1* is the mother of *id_2*, and the variable *Relation* is *redundant* (constant equal to "Mother"). *INDIV_INDIV* is a tidy data frame, if we regard *id_2* as the key of the *observations*.
+
+## Creation of the analysis file
+
+Remember, *id_2* is the child of *id_1*, so a starting point for our efforts is the data frame *per*, given by 
 
 ```{r getper}
 per <- data.frame(id = INDIV_INDIV$id_2,
                   mid = INDIV_INDIV$id_1)
 summary(per)
 ```
+However, the individuals in *INDIVIDUAL* that have no mother (in INDIVIDUAL) must be added. Or, strictly, only the *females* without a mother. Or, even stricter, only those women who are mothers to persons in *INDIVIDUAL*. So,
+
+```{r motherless}
+atoms <- unique(INDIVIDUAL$id_I[!(INDIVIDUAL$id_I %in% per$id) & INDIVIDUAL$id_I %in% per$mid])
+nat <- length(atoms)
+```
+So, there are `r nat` *atom mothers*. These women will constitute the roots of the family trees we will build. For now, we add them to *per*:
+
+```{r addatom}
+per <- rbind(per, data.frame(id = atoms, mid = rep(NA, nat)))
+```
 
 Next we pick the six static variables *sex*, *birthdate*, *deathdate*, *startdate*, *enddate*, and *marriagedate* from *INDIVIDUAL*:
 
 ```{r pickfrom}
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "Sex", "id_I"])
-per$sex <- INDIVIDUAL[INDIVIDUAL$Type == "Sex", ]$Value[indx]
-##
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "Birth_date", "id_I"])
-per$birthdate <- INDIVIDUAL[INDIVIDUAL$Type == "Birth_date", ]$Value[indx]
-##
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "Death_date", "id_I"])
-per$deathdate <- INDIVIDUAL[INDIVIDUAL$Type == "Death_date", ]$Value[indx]
-##
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "Start_observation", "id_I"])
-per$startdate <- INDIVIDUAL[INDIVIDUAL$Type == "Start_observation", ]$Value[indx]
-##
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "End_observation", "id_I"])
-per$stopdate <- INDIVIDUAL[INDIVIDUAL$Type == "End_observation", ]$Value[indx]
-##
-indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == "Marriage_date", "id_I"])
-per$marriagedate <- INDIVIDUAL[INDIVIDUAL$Type == "Marriage_date", ]$Value[indx]
-##
+Types <- unique(INDIVIDUAL$Type)
+for (type in Types){
+    indx <- match(per$id, INDIVIDUAL[INDIVIDUAL$Type == type, "id_I"])
+    per[, type] <- INDIVIDUAL[INDIVIDUAL$Type == type, ]$Value[indx]
+}
+
 kable(head(per), row.names = FALSE)
 ```
 
-This is a good start for the analysis; to be continued.
+Let's look at the characteristics of the data frame *per*:
+
+```{r strper}
+str(per)
+```
+As a consequence of the fact that *INDIVIDUAL* is an un-tidy data frame, the date and sex variables had to be given as *text strings*. We want *Sex* to be a *factor* and the dates are for our coming purposes best treated as numeric (unit: years after "00-01-01 BC", which does not exist, really). So
+
+```{r convertvar}
+per$Birth_date <- as.double(toTime(per$Birth_date))
+per$Death_date <- as.double(toTime(per$Death_date))
+per$Sex <- as.factor(per$Sex)
+per$Start_observation <- as.double(toTime(per$Start_observation))
+per$End_observation <- as.double(toTime(per$End_observation))
+per$Marriage_date <- as.double(toTime(per$Marriage_date))
+kable(head(per), row.names = FALSE)
+```
+
+Now we want the ages at which events occur, so
+
+```{r getages}
+per$enter <- per$Start_observation - per$Birth_date
+per$exit <- per$End_observation - per$Birth_date
+per$death <- per$Death_date - per$Birth_date
+per$marriage <- per$Marriage_date - per$Birth_date
+kable(head(per[, c("id", "mid", "Birth_date", "enter", "marriage", "exit", "death")]))
+```
+
+We further define the variable *event* as an indicator of *death before age one*:
+
+```{r defeve}
+per$event <- !is.na(per$death) & per$death <= 1
+table(per$event)
+```
+
+## Generations
+
+*Generation 0* consists of all mothers without a mother(!).
+
+```{r gen0}
+per$generation <- rep(NA, NROW(per))
+per$generation[is.na(per$mid)] <- 0
+with(per, table(generation, Sex, useNA = "ifany"))
+```
+
+*Generation 1* consists of all individuals whose mother is in Generation 0:
+
+```{r}
+gen0 <- per$id[!is.na(per$generation) & per$generation == 0]
+per$generation[!is.na(per$mid) & per$mid %in% gen0] <- 1
+with(per, table(generation, Sex, useNA = "ifany"))
+```
+
+We got the idea; the rest is executed in a *while* loop:
+
+```{r exeforloop}
+genX <- per$id[!is.na(per$generation) & per$generation == 1]
+loo <- 1
+gen <- 1
+while (loo){
+    oo <- !is.na(per$mid) & (per$mid %in% genX)
+    loo <- sum(oo)
+    if (loo){
+        gen <- gen + 1
+        per$generation[oo] <- gen
+        genX <- per$id[!is.na(per$generation) & per$generation == gen]
+    }
+}
+table(per$generation, per$Sex, useNA = "ifany")
+```
+So, there are 10014 "atom mothers", each the root of a family tree. The largest tree covers ten generations. Note that new branches of a tree is only generated by females; a male node denotes a dead end.
+
+Now we need to put on *grandmother's id* on everyone in the second generation and above. Easy in principle: we have the mother's id of all in these generations and in generation 1, and grandmother is just mother's mother ...
+
+```{r getgrandma}
+per$gmid <- per$mid[match(per$mid, per$id)]
+```
+
+Have a look:
+
+```{r havealook}
+(x <- per[1, c("id", "mid", "gmid")])
+per[per$id == x$mid, c("id", "mid", "gmid")]
+```
+
+We trust it worked (but the sample is small ...). Finally, we would like to put on a variable *tree*, equal to the id of the root, on each individual.
+
+```{r putontree}
+per$tree <- rep(NA, NROW(per))
+per$tree[per$generation == 0] <- per$id[per$generation == 0] # The easy part
+nex <- per$generation == 1
+per$tree[nex] <- per$tree[match(per$mid[nex], per$id)] # Kids are of the same 'tree' as mom.
+```
+
+Got the idea, the rest by looping over generations 2-10:
+
+```{r looprest}
+for (gen in 2:10){
+    nex <- per$generation == gen
+    per$tree[nex] <- per$tree[match(per$mid[nex], per$id)]
+}
+head(per[, c("id","mid", "gmid", "generation", "tree")])
+```
+
+A summary of what has been done so far:
+
+```{r sumall}
+summary(per)
+save(per, file = "data/per.rda")
+```
+
+And saved for future analysis.
+
+
+
+
+
 
 
 
