--- a/fromIDS.Rmd
+++ b/fromIDS.Rmd
@@ -2,7 +2,7 @@
 title: "From IDS to analysis"
 author: "Göran Broström"
 date: "May 7, 2016"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
